--- a/admin.html
+++ b/admin.html
@@ -3,164 +3,205 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Beach House Guest</title>
+<title>Beach House Admin</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <style>
-  #message-list::-webkit-scrollbar { width: 4px; }
-  #message-list::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 10px; }
-  .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 6px; margin-top: 12px; }
-  .day { aspect-ratio: 1/1; border-radius: 10px; display:flex; align-items:center; justify-content:center; font-size:13px; font-weight: 600; }
-  .past { background-color:#f1f5f9; color:#94a3b8; text-decoration: line-through; }
-  .current { background-color:#2563eb; color:white; box-shadow: 0 4px 10px rgba(37, 99, 235, 0.3); }
-  .future { background-color:#ffffff; color:#334155; border: 1px solid #e2e8f0; }
-  .locked-overlay { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(15, 23, 42, 0.9); display:none; flex-direction: column; align-items:center; justify-content:center; color:white; z-index:100; backdrop-filter: blur(10px); }
+.tab-content { display: none; }
+.tab-content.active { display: block; }
+input[type="date"] { background: transparent; cursor: pointer; border: none; font-weight: bold; }
 </style>
 </head>
-<body class="bg-slate-50 font-sans text-slate-900 min-h-screen">
+<body class="bg-slate-50 text-slate-900 font-sans min-h-screen">
 
-<div class="locked-overlay" id="locked-overlay">
-    <div class="text-center">
-        <span class="text-6xl block mb-4">🔒</span>
-        <h2 class="text-2xl font-bold uppercase tracking-widest">Device Locked</h2>
-    </div>
-</div>
+<div class="max-w-5xl mx-auto p-4 md:p-8">
+    <header class="flex justify-between items-center mb-8 bg-white p-6 rounded-[2rem] shadow-sm border border-slate-200">
+        <div>
+            <h1 class="text-2xl font-black tracking-tight">BEACH HOUSE <span class="text-blue-600">ADMIN</span></h1>
+            <p id="current-time" class="text-sm font-mono font-bold text-slate-400"></p>
+        </div>
+    </header>
 
-<div class="max-w-xl mx-auto p-4 md:p-8">
-  <header class="flex justify-between items-end mb-8">
-    <div>
-        <h1 class="text-3xl font-black text-slate-900 leading-none">The Beach House</h1>
-        <p id="current-time" class="text-blue-600 font-bold text-sm mt-2"></p>
-    </div>
-  </header>
+    <nav class="flex space-x-1 mb-8 bg-slate-200/50 p-1 rounded-2xl w-fit">
+        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm bg-white shadow-sm" onclick="openTab(event, 'tab-families')">GUESTS</button>
+        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500" onclick="openTab(event, 'tab-announcements')">PUSH ALERT</button>
+        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500" onclick="openTab(event, 'tab-messages')">CHAT</button>
+        <button class="tab-btn px-6 py-2.5 rounded-xl font-bold text-sm text-slate-500" onclick="openTab(event, 'tab-hardware')">DEVICES</button>
+    </nav>
 
-  <main class="space-y-4">
-    <div id="announcement-banner" class="hidden transform transition-all duration-500">
-        <div class="bg-indigo-600 text-white p-5 rounded-[2rem] shadow-lg flex items-center gap-4">
-            <span class="text-2xl animate-bounce">📢</span>
-            <div>
-                <p class="text-[10px] font-bold uppercase tracking-widest opacity-70">Important Announcement</p>
-                <p id="announcement-text" class="font-bold text-lg leading-tight"></p>
+    <main id="tab-families" class="tab-content active space-y-6">
+        <section class="bg-white p-8 rounded-[2rem] border border-slate-200 shadow-sm">
+            <h2 class="font-bold text-lg mb-4">Register New Arrival</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                <input type="text" id="last_name" placeholder="Last Name" class="border p-4 rounded-2xl bg-slate-50 outline-none focus:ring-2 focus:ring-blue-500">
+                <input type="date" id="check_in" class="border p-4 rounded-2xl bg-slate-50">
+                <input type="date" id="check_out" class="border p-4 rounded-2xl bg-slate-50">
+            </div>
+            <button id="create" class="mt-4 bg-blue-600 text-white px-10 py-4 rounded-2xl font-black hover:bg-blue-700 transition">CONFIRM CHECK-IN</button>
+        </section>
+        <div id="family-list" class="space-y-4"></div>
+    </main>
+
+    <main id="tab-announcements" class="tab-content">
+        <div class="max-w-xl bg-white p-8 rounded-[2rem] border shadow-sm mx-auto">
+            <div id="status-card" class="mb-6 p-4 rounded-2xl text-center border-2 border-dashed border-slate-200">
+                <p id="status-text" class="font-mono font-bold uppercase text-slate-400">No active alerts</p>
+            </div>
+            <textarea id="announcement_msg" rows="3" placeholder="Push a message to all visitor tablets..." class="w-full border p-4 rounded-2xl mb-4 bg-slate-50 resize-none"></textarea>
+            <div class="flex items-center justify-between mb-4 px-2">
+                <span class="font-bold text-slate-600">Duration (Minutes)</span>
+                <input type="number" id="duration_mins" value="15" class="w-20 p-2 border rounded-xl text-center font-bold">
+            </div>
+            <button id="send_announcement" class="w-full bg-indigo-600 text-white py-4 rounded-2xl font-black text-lg hover:bg-indigo-700 shadow-lg shadow-indigo-100">PUSH TO DEVICES</button>
+            <button id="clear_announcement" class="w-full text-red-500 font-bold mt-4 hover:underline">Clear Current Alert</button>
+        </div>
+    </main>
+
+    <main id="tab-messages" class="tab-content">
+        <div class="bg-white p-6 rounded-[2rem] border min-h-[500px] flex flex-col shadow-sm">
+            <div id="message-list" class="flex-1 overflow-y-auto space-y-3 mb-4 pr-2"></div>
+            <div class="flex gap-2 p-2 bg-slate-50 rounded-2xl border border-slate-200">
+                <input type="text" id="send-msg" placeholder="Select a thread to reply..." class="flex-1 bg-transparent px-4 py-3 outline-none">
+                <button id="send-message" class="bg-green-600 text-white px-8 py-3 rounded-xl font-bold hover:bg-green-700 transition">REPLY</button>
             </div>
         </div>
-    </div>
+    </main>
 
-    <div class="bg-white p-6 rounded-[2rem] shadow-sm border border-slate-200">
-        <h2 class="text-2xl font-bold text-slate-800" id="welcome-text">Checking in...</h2>
-        <p id="days-left" class="text-slate-500 font-medium mb-4 text-sm"></p>
-        <div class="pt-4 border-t border-slate-100">
-            <div id="calendar" class="calendar"></div>
+    <main id="tab-hardware" class="tab-content">
+        <div class="bg-slate-900 p-10 rounded-[3rem] text-white shadow-2xl">
+            <h3 class="text-3xl font-black mb-2">Remote Lockdown</h3>
+            <p class="text-slate-400 mb-8">Restrict guest access to tablet features instantly.</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <button id="lock" class="bg-red-600 py-6 rounded-3xl font-black text-lg hover:bg-red-700 transition shadow-xl shadow-red-900/20">🔒 LOCK DEVICES</button>
+                <button id="unlock" class="bg-white/10 py-6 rounded-3xl font-black text-lg hover:bg-white/20 transition">🔓 UNLOCK DEVICES</button>
+            </div>
         </div>
-    </div>
-
-    <section class="bg-white p-6 rounded-[2rem] shadow-sm border border-slate-200">
-      <h3 class="font-bold text-slate-800 mb-4 px-1">Messages</h3>
-      <div id="message-list" class="max-h-80 overflow-y-auto space-y-3 mb-4 pr-1 flex flex-col"></div>
-      <div class="flex gap-2 bg-slate-100 p-2 rounded-2xl">
-        <input type="text" id="guest-msg" class="bg-transparent px-4 py-2 flex-1 outline-none text-slate-700" placeholder="Type a message..." disabled>
-        <button id="send-guest-msg" class="bg-blue-600 text-white px-5 py-2 rounded-xl font-bold disabled:opacity-50" disabled>Send</button>
-      </div>
-    </section>
-  </main>
+    </main>
 </div>
 
 <script>
 const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
 const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
 const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+let replyToId = null;
 
-let currentGuest = null;
-let guestLock = false;
-
-function updateTime() {
-    const now = new Date();
-    document.getElementById('current-time').innerText = now.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
+function openTab(evt, tabName) {
+    document.querySelectorAll('.tab-content').forEach(t => t.classList.remove('active'));
+    document.querySelectorAll('.tab-btn').forEach(b => { b.classList.remove('bg-white','shadow-sm','text-slate-900'); b.classList.add('text-slate-500'); });
+    document.getElementById(tabName).classList.add('active');
+    evt.currentTarget.classList.add('bg-white','shadow-sm','text-slate-900');
+    evt.currentTarget.classList.remove('text-slate-500');
 }
+
+function updateTime() { document.getElementById('current-time').innerText = new Date().toLocaleTimeString(); }
 setInterval(updateTime, 1000);
 
-async function checkAnnouncements() {
-    const { data } = await supabaseClient.from('announcements').select('*').limit(1).maybeSingle();
-    const banner = document.getElementById('announcement-banner');
-    if (data && new Date(data.expires_at) > new Date()) {
-        document.getElementById('announcement-text').innerText = data.message;
-        banner.classList.remove('hidden');
-    } else {
-        banner.classList.add('hidden');
-    }
-}
-setInterval(checkAnnouncements, 10000);
-
-async function guestLogin() {
-    const todayISO = new Date().toISOString().split('T')[0];
-    let lastName = localStorage.getItem('guest_last_name');
-    if(!lastName){
-        lastName = prompt("Enter your last name:");
-        if(lastName) localStorage.setItem('guest_last_name', lastName);
-    }
-    const { data } = await supabaseClient.from('families').select('*').eq('last_name', lastName).gte('check_out_date', todayISO).maybeSingle();
-    if(data){
-        currentGuest = data;
-        document.getElementById('guest-msg').disabled = false;
-        document.getElementById('send-guest-msg').disabled = false;
-        renderGuestInfo();
-        loadMessages();
-        checkAnnouncements();
-    } else {
-        document.getElementById('welcome-text').innerText = "Reservation not found";
-    }
+// --- DATE LOGIC ---
+function adjustDate(dateStr, days) {
+    const d = new Date(dateStr);
+    d.setDate(d.getDate() + days);
+    return d.toISOString().split('T')[0];
 }
 
-function renderGuestInfo(){
-    document.getElementById('welcome-text').innerText = `Hello, ${currentGuest.last_name}s!`;
-    const today = new Date(); today.setHours(0,0,0,0);
-    const checkout = new Date(currentGuest.check_out_date);
-    const checkin = new Date(currentGuest.check_in_date);
-    const daysLeft = Math.max(Math.ceil((checkout - today) / (1000*60*60*24)), 0);
-    document.getElementById('days-left').innerText = `${daysLeft} days remaining`;
+async function updateGuestDate(id, field, val) {
+    await supabaseClient.from('families').update({ [field]: val }).eq('id', id);
+    loadFamilies();
+}
 
-    const calendarDiv = document.getElementById('calendar');
-    calendarDiv.innerHTML = '';
-    for(let d = new Date(checkin); d <= checkout; d.setDate(d.getDate()+1)){
-        const dayDiv = document.createElement('div');
-        const dateCopy = new Date(d);
-        dayDiv.className = `day ${dateCopy < today ? 'past' : (dateCopy.toDateString() === today.toDateString() ? 'current' : 'future')}`;
-        dayDiv.innerText = d.getDate();
-        calendarDiv.appendChild(dayDiv);
+async function loadFamilies() {
+    const { data } = await supabaseClient.from('families').select('*').order('check_in_date', { ascending: true });
+    const list = document.getElementById('family-list');
+    list.innerHTML = '';
+    data?.forEach(f => {
+        const div = document.createElement('div');
+        div.className = "bg-white p-6 rounded-[2rem] border border-slate-200 flex flex-wrap justify-between items-center gap-4 shadow-sm group hover:border-blue-300 transition-colors";
+        div.innerHTML = `
+            <div class="flex-1 min-w-[150px]">
+                <p class="font-black text-xl uppercase tracking-tight">${f.last_name}</p>
+                <p class="text-[10px] text-blue-600 font-bold uppercase tracking-widest">Confirmed Guest</p>
+            </div>
+            <div class="flex gap-6">
+                <div class="text-center">
+                    <p class="text-[9px] font-bold text-slate-400 uppercase tracking-widest mb-1">In</p>
+                    <div class="flex items-center gap-2 bg-slate-50 p-1 rounded-lg">
+                        <button onclick="updateGuestDate('${f.id}','check_in_date',adjustDate('${f.check_in_date}',-1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">-</button>
+                        <input type="date" value="${f.check_in_date}" onchange="updateGuestDate('${f.id}','check_in_date',this.value)" class="text-xs">
+                        <button onclick="updateGuestDate('${f.id}','check_in_date',adjustDate('${f.check_in_date}',1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">+</button>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <p class="text-[9px] font-bold text-slate-400 uppercase tracking-widest mb-1">Out</p>
+                    <div class="flex items-center gap-2 bg-slate-50 p-1 rounded-lg">
+                        <button onclick="updateGuestDate('${f.id}','check_out_date',adjustDate('${f.check_out_date}',-1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">-</button>
+                        <input type="date" value="${f.check_out_date}" onchange="updateGuestDate('${f.id}','check_out_date',this.value)" class="text-xs">
+                        <button onclick="updateGuestDate('${f.id}','check_out_date',adjustDate('${f.check_out_date}',1))" class="w-7 h-7 rounded-md bg-white border border-slate-200 shadow-sm font-bold">+</button>
+                    </div>
+                </div>
+            </div>
+            <button onclick="checkout('${f.id}')" class="bg-red-50 text-red-500 px-6 py-2 rounded-xl text-xs font-bold hover:bg-red-500 hover:text-white transition">CHECKOUT</button>`;
+        list.appendChild(div);
+    });
+}
+
+window.checkout = async (id) => {
+    if(confirm("Complete checkout? This will delete messages for this family.")) {
+        await supabaseClient.from('families').delete().eq('id', id);
+        await supabaseClient.from('messages').delete().eq('family_id', id);
+        loadFamilies();
     }
 }
 
-async function loadMessages(){
-    if(!currentGuest) return;
-    const { data: msgs } = await supabaseClient.from('messages').select('*').eq('family_id', currentGuest.id).order('created_at',{ ascending:true });
+document.getElementById('create').onclick = async () => {
+    const ln = document.getElementById('last_name').value;
+    const ci = document.getElementById('check_in').value;
+    const co = document.getElementById('check_out').value;
+    if(!ln || !ci || !co) return alert("Fill all fields");
+    await supabaseClient.from('families').insert({ last_name: ln, check_in_date: ci, check_out_date: co });
+    document.getElementById('last_name').value = '';
+    loadFamilies();
+};
+
+async function loadMessages() {
+    const { data } = await supabaseClient.from('messages').select('*, families(last_name)').order('created_at',{ ascending:true });
     const list = document.getElementById('message-list');
     list.innerHTML = '';
-    msgs?.forEach(m => {
-        const isMe = m.sent_by === 'guest';
+    data?.forEach(m => {
+        const isHost = m.sent_by === 'host';
         const div = document.createElement('div');
-        div.className = `p-3 rounded-2xl text-sm ${isMe ? 'bg-blue-600 text-white self-end ml-8' : 'bg-slate-100 text-slate-800 self-start mr-8'}`;
-        div.innerHTML = `<div class="font-black text-[9px] uppercase opacity-60 mb-1">${isMe ? 'You' : 'Host'}</div><div>${m.message}</div>`;
+        div.className = `p-4 rounded-2xl cursor-pointer shadow-sm ${isHost ? 'bg-blue-600 text-white ml-12 border-blue-400' : 'bg-white border border-slate-200 mr-12'}`;
+        div.onclick = () => { replyToId = m.family_id; document.getElementById('send-msg').placeholder = `Reply to ${m.families?.last_name}...`; document.getElementById('send-msg').focus(); };
+        div.innerHTML = `<p class="text-[9px] font-bold uppercase tracking-widest mb-1 ${isHost?'text-blue-100':'text-slate-400'}">${isHost ? 'YOU (Host)' : m.families?.last_name}</p><p class="text-sm font-medium">${m.message}</p>`;
         list.appendChild(div);
     });
     list.scrollTop = list.scrollHeight;
 }
 setInterval(loadMessages, 5000);
 
-document.getElementById('send-guest-msg').onclick = async () => {
-    const msgInput = document.getElementById('guest-msg');
+document.getElementById('send-message').onclick = async () => {
+    const msgInput = document.getElementById('send-msg');
     const msg = msgInput.value.trim();
-    if(!msg || guestLock) return;
-    await supabaseClient.from('messages').insert({ family_id: currentGuest.id, message: msg, sent_by: 'guest' });
+    if(!msg || !replyToId) return alert("Select a thread first!");
+    await supabaseClient.from('messages').insert({ family_id: replyToId, message: msg, sent_by: 'host' });
     msgInput.value = '';
     loadMessages();
 };
 
-async function checkLock(){
-    const { data } = await supabaseClient.from('tablet_lock').select('*').eq('id',1).maybeSingle();
-    guestLock = data?.is_locked || false;
-    document.getElementById('locked-overlay').style.display = guestLock ? 'flex' : 'none';
-}
-setInterval(checkLock, 3000);
-guestLogin();
+// Announcement & Lock controls
+document.getElementById('send_announcement').onclick = async () => {
+    const msg = document.getElementById('announcement_msg').value;
+    const mins = parseInt(document.getElementById('duration_mins').value);
+    const expiry = new Date(); expiry.setMinutes(expiry.getMinutes() + mins);
+    await supabaseClient.from('announcements').delete().neq('message', 'x');
+    await supabaseClient.from('announcements').insert({ message: msg, expires_at: expiry.toISOString() });
+    document.getElementById('announcement_msg').value = '';
+};
+
+document.getElementById('clear_announcement').onclick = async () => { await supabaseClient.from('announcements').delete().neq('message', 'x'); };
+document.getElementById('lock').onclick = async () => { await supabaseClient.from('tablet_lock').upsert({ id:1, is_locked:true }); };
+document.getElementById('unlock').onclick = async () => { await supabaseClient.from('tablet_lock').upsert({ id:1, is_locked:false }); };
+
+loadFamilies();
+loadMessages();
 </script>
 </body>
 </html>
